fix feeds are not updated when adding new on mobile + fix some CSS

--- a/src/styles/css/feed.css
+++ b/src/styles/css/feed.css
@@ -58,7 +58,7 @@
 
 .mdl-card__title {
   background-size: cover;
-  height: 300px;
+  height: 500px;
   cursor: pointer;
 }
 
@@ -87,13 +87,13 @@
   }
 }
 
-@media (min-width: 480px) and (max-width: 839px) {
+@media (min-width: 840px) and (max-width: 1200px) {
   .shared-moment-card.mdl-card {
-    width: 45%;
+    width: calc(33% - 16px);
   }
 }
 
-@media (max-width: 479px) {
+@media (max-width: 600px) {
   .shared-moment-card.mdl-card {
     width: 100%;
   }
